# Enterprise-Data-Pipeline-Orchestration-Agent

./: .env.example  .gitignore  README.md  healing-agent-report.tex  pyproject.toml  requirements.txt  run_platform.py  vercel.json
configs/: settings.yaml
database/: customers.json  init_db.py
public/: app.js  index.html
scratch/: create_test_databases.py  populate_db.py
src/: config.py  database.py
src/agents/: classifier.py  monitor.py  rca.py  recovery.py
src/api/: main.py
src/incidents/: incident_manager.py  incident_repository.py  severity_rules.py
src/models/: schemas.py
src/orchestration/: graph.py
src/pipeline/: csv_pipeline.py  db_pipeline.py  etl_engine.py  json_pipeline.py
src/services/: audit_service.py  pipeline_service.py  quarantine_service.py  remediation_service.py
src/telemetry/: incident_creator.py  logger.py  validators.py
src/ui/: app.py
test/: test_recovery.py
test_data/pipeline_A/: case_drift_country.json  case_drift_email.json  case_drift_id.json  case_drift_multi.json  case_duplicate_ids.json  case_healthy.json  case_invalid_email.json  case_invalid_root.json
test_data/pipeline_B/: healthy.db  missing_table.db  referential_integrity.db  sql_error.db
test_failures/: corrupted_file.csv  duplicate_ids.csv  missing_column.csv
